--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
