--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.3",
     "flowbite-react": "^0.7.8",
+    "intersection-observer": "^0.12.2",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "react": "^18.2.0",
